@@ -1,1 +1,2 @@
 6.4.0
+- Implemented Cache Server Properties connection option
